app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
        name: app
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  namespace: app
spec:
  selector:    
    app: nodejs
  type: ClusterIP
  ports:  
  - name: http
    port: 3000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs
  name: nodejs
  namespace: app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodejs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs
    spec:
      containers:
      - image: nikhilraj0811/nodej-example:latest
        imagePullPolicy: Always
        name: nodejs
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  replicas: 1
